# cem-vlm-eval-harness

./: .gitignore  CITATION.bib  LICENSE.md  README.md  pyproject.toml  연구노트.md
archive/: 3. Domain.xlsx  generated_quizzes.xlsx  generated_quizzes_.xlsx  generated_quizzes_우리말.xlsx  generated_quizzes_우리말_.xlsx  test.xlsx  국가기술자격증시험_9급 지방직 공무원 서울시_9급 지방직 공무원 서울시 건축계획.xlsx  국가기술자격증시험_9급 지방직 공무원 서울시_9급 지방직 공무원 서울시 건축구조.xlsx  국가기술자격증시험_9급 지방직 공무원_9급 지방직 공무원 건축계획.xlsx  국가기술자격증시험_9급 지방직 공무원_9급 지방직 공무원 건축구조.xlsx  국가기술자격증시험_기능사_건설재료시험기능사.xlsx  국가기술자격증시험_기능사_실내건축기능사.xlsx  국가기술자격증시험_기능사_전산응용건축제도기능사.xlsx  국가기술자격증시험_기능장_건설기계정비기능장.xlsx  국가기술자격증시험_기능장_건축일반시공기능장.xlsx  국가기술자격증시험_기사_건설기계설비기사.xlsx  국가기술자격증시험_기사_건설안전기사.xlsx  국가기술자격증시험_기사_건설재료시험기사.xlsx  국가기술자격증시험_기사_건축기사.xlsx  국가기술자격증시험_기사_실내건축기사(구).xlsx  국가기술자격증시험_기사_실내건축기사.xlsx  국가기술자격증시험_산업기사_건설기계설비산업기사.xlsx  국가기술자격증시험_산업기사_건축산업기사.xlsx  국가기술자격증시험_산업기사_건축설비산업기사.xlsx
make_data/: __main__.py  format_converter.py  functions.py  quiz_generator.py  templates.yaml
output/: 건설사업정보시스템_건설용어사전.xlsx  국가기술자격증시험_9급 국가직 공무원_9급 국가직 공무원 건축계획.xlsx  국가기술자격증시험_9급 국가직 공무원_9급 국가직 공무원 건축구조.xlsx  국가기술자격증시험_9급 지방직 공무원 서울시_9급 지방직 공무원 서울시 건축계획.xlsx  국가기술자격증시험_9급 지방직 공무원 서울시_9급 지방직 공무원 서울시 건축구조.xlsx  국가기술자격증시험_9급 지방직 공무원_9급 지방직 공무원 건축계획.xlsx  국가기술자격증시험_9급 지방직 공무원_9급 지방직 공무원 건축구조.xlsx  국가기술자격증시험_기능사_건설기계정비기능사.xlsx  국가기술자격증시험_기능사_건설재료시험기능사.xlsx  국가기술자격증시험_기능사_실내건축기능사.xlsx  국가기술자격증시험_기능사_전산응용건축제도기능사.xlsx  국가기술자격증시험_기능장_건설기계정비기능장.xlsx  국가기술자격증시험_기능장_건축목재시공기능장.xlsx  국가기술자격증시험_기능장_건축일반시공기능장.xlsx  국가기술자격증시험_기사_건설기계설비기사.xlsx  국가기술자격증시험_기사_건설안전기사.xlsx  우리말건설용어집.xlsx  (+17 more)
(+36 files in other folders)
