[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cem_lm_eval"
version = "0.1.1"
authors = [
    {name="pikaybh", email="pikaybh@snu.ac.kr"}
]
description = "A framework for evaluating language models ability to interpretate architecture drawings for construction management."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
license = { "text" = "MIT" }